Ok, I hadnt solved responsiveness, layout was actually destroyed on mobile due to min-height:100% on body, fixed it by changing the value to 100vh, so it will always be at least the height of the viewport. The content is already a lot better, but I still consider it just a placeholder.

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 html, body{
-    height: 100%;
+    min-height: 100vh;
     width: 100%;
+    
     font-family: Montserrat, sans-serif;
     line-height: 4vh;
     background-color: #2e2e2e;
@@ -9,7 +10,6 @@ html, body{
 p,a{
     color: #ebebeb;
     font-size: 2vh;
-
     padding: 0.5rem 0 0.5rem 0;
 }
 
@@ -42,6 +42,7 @@ body{
 
     display: flex;
     flex-flow: column nowrap;
+    
 }
 
 
@@ -90,4 +91,17 @@ body{
 
 .linkedin-link{
     background: url("../images/icons/linkedin.svg") no-repeat bottom 45% center;
+}
+
+
+@media only screen and (max-width: 768px){
+    body{
+        grid-template-columns: 10% 1fr 10%;
+    }
+    .presentation-text{
+        width: 100%;
+    }
+    .links{
+        width: 100%;
+    }
 }
